# TaskManagedAI

./: .dockerignore  .env.example  .gitignore  .mcp.json  .worktreeinclude  AGENTS.md  CLAUDE.md  Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.observability.yml  docker-compose.yml  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/plans/: context-management-refactor.md  master-plan-section-10-11-update.md  master-plan-section-3-9-update-prep.md  p0-exit-final-hardening-2026-05-22.md  p0-exit-full-audit-2026-05-22.md  sp012-full-implementation-roadmap.md  sp012-split-brain-keyring.md  sp022-t00-pre-implementation-gate.md  sp022-t01-framework-intake-ci.md  sp022-t02-phase1-signed-approval.md  sp022-t02p2-t08b2-backup-real-io.md  sp022-t02p3-t08b3-restore-real-io.md  sp022-t02p4-t08b4-rollback-splitbrain-approval.md  sp022-t02p5-backup-compose-exec.md  sp022-t03-drill-scheduling-sop.md  sp022-t04-phase-e-audit.md  sp022-t07-production-checklist-skeleton.md  sp022-t08-batch1-signed-journal-cli.md  sp022-t09-prep-mac-smoke.md
.claude/reference/: agent-routing.md  audit-ownership-matrix.md  code-search.md  codex-multi-round-workflow.md  codex-output-contract.md  db-schema-notes.md  deliverables.md  dev-commands.md  directory-structure.md  frontend-strategy.md  governance-cycle.md  hard-gates-and-kpis.md  harness-inventory.md  mcp-db-tools.md  multi-agent-orchestration-draft.md  provider-compliance-matrix.md  secretbroker-contract.md  skill-lint-banned-terms.md  task-planning-matrix.md  testing.md  user-preferences.md
.claude/rules/: agentrun-state-machine.md  ai-output-boundary.md  branch-and-pr-workflow.md  code-search.md  codex-multi-round-workflow.md  codex-pr-review-checklist.md  codex-usage-policy.md  core.md  cross-source-enum-integrity.md  docker-stack-hygiene.md  instincts.md  plan-review.md  provider-compliance.md  rendering.md  secretbroker-boundary.md  server-owned-boundary.md  sprint-pack-adr-gate.md  testing.md
.claude/scripts/: codex_pr_full_review.README.md  codex_pr_full_review.sh
.codex/: config.toml  hooks.json
.codex/agents/: actor-binding-reviewer.toml  agentrun-state-reviewer.toml  code-reviewer.toml  hard-gate-fixture-reviewer.toml  plan-reviewer.toml  postgres-specialist.toml  provider-compliance-reviewer.toml  release-auditor.toml  runner-security-reviewer.toml  security-specialist.toml  sprint-pack-reviewer.toml  tdd-orchestrator.toml  tenant-project-isolation-reviewer.toml
.github/workflows/: ci-smoke.yml  ci.yml  nightly-regression.yml  permission-matrix-check.yml  private-staging-e2e.yml
.taskhub/: approval-verify-key-fingerprints.allowlist
backend/app/: config.py  main.py
baselines/: mac.json
cli/: README.md  pyproject.toml
cli/tm/: __init__.py  __main__.py  client.py  main.py  types.py
cli/tm/auth/: __init__.py  capability_token.py
cli/tm/commands/: __init__.py  approval.py  auth.py  context.py  doctor.py  memory.py  onboarding.py  pr.py  provider.py  repo.py  run.py  secret.py  settings.py  ticket.py
cli/tm/config/: __init__.py  profile_loader.py
cli/tm/output/: __init__.py  human_formatter.py  json_formatter.py  redaction.py  yaml_formatter.py
config/: cli_registry.toml  github_app_permissions.toml  policy_pack.toml  provider_compliance.toml  tool_registry.toml
config/observability/: loki.yml  prometheus.yml  promtail.yml
docs/adr/: 00001_auth_rbac.md  00002_db_schema.md  00003_api_contract.md  00004_agentrun_state_machine.md  00006_secrets_management.md  00007_external_exposure.md  00008_destructive_operation.md  00009_action_class_taxonomy.md  00010_provider_change.md  00011_github_app_permission_matrix.md  00012_hook_trust_boundary.md  00013_remote_agent_extension.md  00014_multi_agent_orchestration.md  00015_ui_cli_parity.md  00016_hermes_agent_integration_strategy.md  00017_ai_society_visualization.md  00018_inter_agent_communication.md  00019_role_taxonomy.md  00020_framework_intake_checklist.md  00021_host_portable_deployment.md  00022_dev_login_cookie_secure_attribute.md  00023_interaction_gateway_realtime_intake.md  00024_project_auto_discovery_memory_boundary.md  00025_autonomy_policy_profiles.md  00026_mcp_server_gateway.md  00026_pitr_wal_archiving.md  00027_superintendent_agent.md  00027_tool_registry_security_boundary.md  00028_split_brain_second_line.md  00029_approval_keyring_rotation.md  00030_tool_registry_network_enum.md  00032_curator_insights_metrics_boundary.md  00033_agent_run_cost_summary_endpoint.md  00034_ticket_due_date_column.md  00035_project_settings_edit.md  00036_secret_refs_inventory.md  00037_data_management.md  00038_agentrun_realtime_sse.md  00039_dashboard_runs_aggregate_endpoints.md  00040_agent_run_activity_timeseries.md  (+22 more)
docs/citations/: README.md  dependency_to_framework_map.json  framework_pattern_candidates.md  (+1 more)
frontend/: .prettierrc.json  eslint.config.mjs  middleware.ts  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  postcss.config.js  tailwind.config.ts  tsconfig.json  vitest.config.ts  vitest.server-only-stub.ts  vitest.setup.ts
migrations/: env.py  script.py.mako
scripts/: __init__.py  alembic_wrapper.sh  kpi_rollup_run.py  p0_acceptance_report_run.py  pitr_drill.py  regenerate-hook-manifest.sh  setup-mcp-client.sh  sp_phase0_docker_smoke.sh  taskhub_active_registry.py  taskhub_active_registry_gate.py  taskhub_admin.py  taskhub_approval_cli.py  taskhub_approval_issuance.py  taskhub_backup_orchestrator.py  taskhub_destructive_lock.py  taskhub_keyring.py  taskhub_kpi_baseline.py  taskhub_local_status.py  taskhub_remote_status.py  taskhub_restore_orchestrator.py  taskhub_secret_gc.py  taskhub_secret_lifecycle.py  taskhub_signed_approval.py  taskhub_signed_journal_db.py  taskhub_signed_journal_offline.py  taskhub_subprocess_runner.py  verify-hook-trust-root.sh  wal_archiving_check.py  worktree_setup.sh
tests/: conftest.py  test_auth.py  test_db_connection.py  test_dev_actor_middleware.py  test_health.py  test_seeds.py  test_session_iat.py  test_worker.py
(+1600 files in other folders)
