[build-system]
requires = ["setuptools>=69,<70", "wheel>=0.43,<0.44"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmanagedai"
version = "0.1.0"
description = "AI-native task management foundation for Sprint 1."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13,<2.0",
  "arq>=0.26,<1.0",
  "asyncpg>=0.29,<1.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "jsonschema>=4.0,<5.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
  "mypy>=1.10,<2.0",
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that require docker compose services",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "ASYNC", "S", "T20"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "."
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["arq.*"]
ignore_missing_imports = true

