[build-system]
requires = ["setuptools>=69,<70", "wheel>=0.43,<0.44"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmanagedai"
version = "0.1.0"
description = "AI-native task management foundation for Sprint 1."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13,<2.0",
  "arq>=0.26,<1.0",
  "asyncpg>=0.29,<1.0",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "jsonschema>=4.0,<5.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[dependency-groups]
dev = [
  "mypy>=1.10,<2.0",
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that require docker compose services",
]

[tool.ruff]
target-version = "py312"
# core.md / testing.md do not pin 100 chars. 120 keeps provider/test literals readable
# while still forcing true outliers to be wrapped manually.
line-length = 120
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "ASYNC", "S", "T20"]
# B008: FastAPI Depends/Query/Header/etc. を引数 default で使う pattern は FastAPI 公式推奨
# (https://fastapi.tiangolo.com/tutorial/dependencies/) のため project-wide で許可。
# 該当: backend/app/api/*.py の `Depends(get_*)` / `Query(...)` / `Header(...)` 全箇所。
ignore = ["B008"]
# UP046/UP047 は Python 3.12 専用 repo の TypeVar/Generic 機械変換のみ。
# `uv run ruff check --fix backend tests` でこの 5 件も適用できるよう rule 単位で安全扱いする。
extend-safe-fixes = ["UP046", "UP047"]

[tool.ruff.lint.per-file-ignores]
# tests は fixture / mock / parametrize で Any と dummy secret literal を使うため、production とは分離する。
"tests/**/*.py" = ["ANN401", "S101", "S105", "S106"]
"tests/db/test_secret_constraints.py" = ["S107"]
"tests/eval/test_citation_coverage_loader.py" = ["S108"]
"tests/eval/test_secret_canary_loader.py" = ["S108"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "."
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["arq.*"]
ignore_missing_imports = true
