[build-system]
requires = ["setuptools>=69,<70", "wheel>=0.43,<0.44"]
build-backend = "setuptools.build_meta"

[project]
name = "taskmanagedai"
version = "0.1.0"
description = "AI-native task management foundation for Sprint 1."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "alembic>=1.13,<2.0",
  "arq>=0.26,<1.0",
  "asyncpg>=0.29,<1.0",
  # SP022-T02 Phase 1 signed approval Ed25519 verify (`scripts/taskhub_signed_approval.py`)
  # ADR-00021 §3 admin CLI security boundary、T03 SOP §7 planned contract normative 化
  "cryptography>=42,<43",
  "fastapi>=0.115,<1.0",
  "httpx>=0.27,<1.0",
  "jsonschema>=4.0,<5.0",
  # Observability (Sprint 11.5 batch 0、BL-0131 OTel + BL-0132 Prometheus)
  # Pin instrumentation packages to `<0.52` to block unexpected beta upgrades
  # (Sprint 11.5 batch 0 plan v2 §M-2 adopt、batch 1 で stable release 再評価)
  "opentelemetry-api>=1.30,<2.0",
  "opentelemetry-sdk>=1.30,<2.0",
  "opentelemetry-exporter-otlp-proto-grpc>=1.30,<2.0",
  "opentelemetry-instrumentation-fastapi>=0.51b0,<0.52",
  "opentelemetry-instrumentation-httpx>=0.51b0,<0.52",
  "opentelemetry-instrumentation-sqlalchemy>=0.51b0,<0.52",
  "opentelemetry-instrumentation-redis>=0.51b0,<0.52",
  "prometheus-client>=0.21,<1.0",
  "pydantic>=2.7,<3.0",
  "pydantic-settings>=2.2,<3.0",
  "sqlalchemy[asyncio]>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
  "rfc8785>=0.1.4",
]

[project.scripts]
# ADR-00021 §3 host-portable admin CLI entry point (Codex R2 F-PR63-003 adopt)
# `uv sync` 後に `taskhub <subcommand>` で起動可能、SP-012 §128 host migration drill
# command (`taskhub backup --output ...`, `taskhub migrate --via tailscale`, 等) と整合
taskhub = "scripts.taskhub_admin:main"
# SP-016 project-user CLI. The installable package lives under ./cli; this root entry
# point keeps local `uv run tm ...` smoke tests available before `uv tool install ./cli`.
tm = "tm.main:main"

[dependency-groups]
dev = [
  "mypy>=1.10,<2.0",
  "pytest>=8.2,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.5,<1.0",
  "types-jsonschema>=4.26.0.20260408,<5.0",
]

[tool.setuptools.packages.find]
include = ["backend*", "scripts*", "tm*"]
where = [".", "cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: tests that require docker compose services",
]

[tool.ruff]
target-version = "py312"
# core.md / testing.md do not pin 100 chars. 120 keeps provider/test literals readable
# while still forcing true outliers to be wrapped manually.
line-length = 120
exclude = [
  ".git",
  ".mypy_cache",
  ".pytest_cache",
  ".ruff_cache",
  ".venv",
  "build",
  "dist",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ANN", "ASYNC", "S", "T20"]
# B008: FastAPI Depends/Query/Header/etc. を引数 default で使う pattern は FastAPI 公式推奨
# (https://fastapi.tiangolo.com/tutorial/dependencies/) のため project-wide で許可。
# 該当: backend/app/api/*.py の `Depends(get_*)` / `Query(...)` / `Header(...)` 全箇所。
ignore = ["B008"]
# UP046/UP047 は Python 3.12 専用 repo の TypeVar/Generic 機械変換のみ。
# `uv run ruff check --fix backend tests` でこの 5 件も適用できるよう rule 単位で安全扱いする。
extend-safe-fixes = ["UP046", "UP047"]

[tool.ruff.lint.per-file-ignores]
# tests は fixture / mock / parametrize で Any と dummy secret literal を使うため、production とは分離する。
"tests/**/*.py" = ["ANN401", "S101", "S105", "S106"]
"tests/db/test_secret_constraints.py" = ["S107"]
"tests/eval/test_citation_coverage_loader.py" = ["S108"]
"tests/eval/test_secret_canary_loader.py" = ["S108"]
# tests/scripts/ は subprocess mock の fake_run callable や approval/active-registry
# fixture が多く、E501 (long canonical signed JSON literal) / ANN001/202 (fake_run
# 内側 signature は monkeypatch.setattr で動的に決まる) / S108 (test artifact tmp
# path 固定文字列) / S104 (negative test で "0.0.0.0" を claim mismatch verify) を
# per-file ignore。production code は影響を受けない。
# (SP022-T09 prep, 2026-05-22: latest main で latent issue 検出、CI billing-blocked
# のため CI 上で見落とされていた。Mac single-host smoke verification の一環で fix.)
"tests/scripts/test_taskhub_active_registry.py" = ["E501"]
"tests/scripts/test_taskhub_destructive_lock.py" = ["E501"]
"tests/scripts/test_taskhub_restore_orchestrator.py" = ["ANN001", "ANN202", "S104", "S108"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "."
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["arq.*"]
ignore_missing_imports = true
